# ShellDesk

./: .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  README.zh-CN.md  electron-builder.config.cjs  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vite.config.ts
docs/: compatibility.md  local-mcp-service.md  remote-desktop-component-roadmap.md  sftp-transfer-window.md  ssh-architecture.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: agent_sessions.rs  ai.rs  app.rs  bootstrap.rs  browser_proxy.rs  command_runner.rs  config.rs  connection.rs  connection_monitor.rs  database.rs  database_tunnel.rs  http_tunnel.rs  ipc.rs  local_fs.rs  logs.rs  mcp_server.rs  modules.rs  monitor_persistence.rs  remote_fs.rs  russh_client.rs  ssh_transport.rs  ssh_tunnel.rs  state.rs  sync_backend.rs  system.rs  terminal.rs  tray.rs  updater.rs  util.rs  vault.rs  vault_storage.rs  vnc.rs
src-tauri/src/connection/: host_keys.rs
src-tauri/src/database/: mod.rs  mongo.rs  mysql.rs  parse.rs  postgres.rs  redis.rs  sql.rs  sqlite.rs  tunnel.rs
src-tauri/src/database/tunnel/: clickhouse.rs  core.rs  mongo.rs  mysql.rs  postgres.rs  redis.rs  rows.rs
src-tauri/src/ipc/: app_channels.rs  connection_channels.rs  database_channels.rs  utility_channels.rs  vault_channels.rs
src-tauri/src/monitor_persistence/: collector.py
src-tauri/src/remote_fs/: commands.rs  paths.rs  sftp.rs  transfer.rs
src-tauri/src/sync_backend/: apply.rs  merge.rs  records.rs
src-tauri/src/vault/: bookmarks.rs  normalize.rs  remote_profiles.rs  ssh_keys.rs
(+379 files in other folders)
