[package]
name = "shelldesk"
version = "1.0.0"
description = "Tauri shell for a GUI SSH client."
authors = ["liubaicai <liushuai.baicai@hotmail.com>"]
license = "GPL-3.0-only"
repository = "https://github.com/liubaicai/ShellDesk"
edition = "2021"
rust-version = "1.80"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = "1"
aes-gcm = "0.10"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
csv = "1"
dirs = "6"
futures-util = "0.3"
open = "5"
portable-pty = "0.9"
pbkdf2 = "0.12"
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
rfd = "0.15"
async-trait = "0.1"
russh = "0.53"
russh-keys = "0.49.2"
sqlx = { version = "0.8", features = ["runtime-tokio", "mysql", "postgres", "chrono"] }
fred = { version = "10", features = ["enable-rustls"] }
clickhouse = { version = "0.14", features = ["rustls-tls"] }
mongodb = { version = "3", features = ["rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-updater = "2"
thiserror = "2"
tokio = { version = "1", features = ["process", "io-util", "time", "net", "sync", "macros", "rt-multi-thread"] }
tokio-tungstenite = "0.28"
tokio-util = "0.7"
url = "2"
tauri-plugin-single-instance = "2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_Foundation", "Win32_Globalization", "Win32_Security_Cryptography"] }
